--- a/components/Page/Page.module.scss
+++ b/components/Page/Page.module.scss
@@ -2,12 +2,13 @@
   position: relative;
 
   .Main {
-    min-height: 100vh;
+    //min-height: 100vh;
     padding: 4rem 0;
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 1rem 0 1rem;
   }
 }
