--- a/pages/plants/add/PlantsAdd.module.scss
+++ b/pages/plants/add/PlantsAdd.module.scss
@@ -1,5 +1,10 @@
 .PlantsAddPage {
   .Image {
+
+    display: flex;
+    position: relative;
+    height: 100px;
+    width: 100px;
     max-width: 100px;
     max-height: 100px;
   }
